--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^0.21.1",
     "element-ui": "^2.15.3",
     "qs": "^6.10.1",
+    "video.js": "^7.14.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
