--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.3",
     "qs": "^6.10.1",
     "video.js": "^7.14.3",
