--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "echarts": "^4.9.0",
+    "el-tree-transfer": "^2.4.7",
     "element-ui": "^2.15.3",
     "qs": "^6.10.1",
     "video.js": "^7.14.3",
