--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve": "webpack-dev-server --open"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.7",
     "axios": "^0.21.1",
     "echarts": "^4.9.0",
     "el-tree-transfer": "^2.4.7",
