--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qs": "^6.10.1",
     "video.js": "^7.14.3",
     "vue": "^2.5.2",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2"
   },
