--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "qs": "^6.10.1",
     "video.js": "^7.14.3",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2"
   },
