--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "qs": "^6.10.1",
     "video.js": "^7.14.3",
     "vue": "^2.5.2",
-    "vue-particles": "^1.0.9",
     "vue-amap": "^0.5.10",
     "vue-baidu-map": "^0.21.22",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2"
   },
@@ -79,6 +79,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0"
   },
